--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Guide for use -->
+    <div class="quick-guide">
+        <p>Quick Guide<br>
+            - picture-in-picture app is made for users who don't have a multi-screen set-up.<br>
+            - if you select window, click 'START' to begin sharing OR if you select tab, navigate back to picture-in-picture app and click the 'START' to begin sharing.<br>
+            - the pop-up mini-screen can be resized from its default size as well as repositioned anywhere on your computer screen to suit your need.<br>
+            - reload the app to choose a new window/tab to share.
+        </p>
+    </div>
     <!-- Video -->
     <video id="video" controls height="360" width="640" hidden></video>
 
